deployment/k8s/11-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: uav-store
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      volumes:
        - name: migrations
          configMap:
            name: product-migrations
      containers:
        - name: product-service
          image: product-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: uav-store
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
