deployment/k8s/14-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: uav-store
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      volumes:
        - name: migrations
          configMap:
            name: order-migrations
      containers:
        - name: order-service
          image: order-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8085
          livenessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: uav-store
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
