deployment/k8s/17-payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: uav-store
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      volumes:
        - name: migrations
          configMap:
            name: payment-migrations
      containers:
        - name: payment-service
          image: payment-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8086
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8086
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8086
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: uav-store
  labels:
    app: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
